[package]
name = "kolinaloader"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_System_LibraryLoader",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug"
]}

reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"] }
chrono = "0.4"
thread = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_Foundation"
] }
